:art: Improving containers cards and adding 'stats' to nav bar

--- a/pydocker/manager/templates/manager/base.html
+++ b/pydocker/manager/templates/manager/base.html
@@ -26,6 +26,7 @@
       <div class="mdl-layout-spacer"></div>
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="#">Containers</a>
+        <a class="mdl-navigation__link" href="#">Stats</a>
         <a class="mdl-navigation__link" href="#">Images</a>
         <a class="mdl-navigation__link" href="#">Fabric</a>
       </nav>
@@ -37,6 +38,7 @@
     <span class="mdl-layout__title">PyDocker</span>
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link" href="#">Containers</a>
+      <a class="mdl-navigation__link" href="#">Stats</a>
       <a class="mdl-navigation__link" href="#">Images</a>
       <a class="mdl-navigation__link" href="#">Fabric</a>
     </nav>
