--- a/pydocker/manager/templates/manager/components/containers_grid.html
+++ b/pydocker/manager/templates/manager/components/containers_grid.html
@@ -2,7 +2,7 @@
   <div class="mdl-cell mdl-cell--3-col">
 
     <!-- Container card -->
-    <div class="mdl-card mdl-shadow--2dp">
+    <div class="mdl-card mdl-shadow--2dp" style="margin: auto;">
       <div class="mdl-card__title">
         <h2 class="mdl-card__title-text">{{ container.Names.0 }}</h2>
       </div>
@@ -18,7 +18,7 @@
         <b>State:</b>
         <span>{{ container.State }}</span>
       </div>
-      <div class="mdl-card__actions">
+      <div class="mdl-card__actions mdl-card--border">
         <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
           Full Details
         </a>
