--- a/pydocker/manager/templates/manager/components/navbar.html
+++ b/pydocker/manager/templates/manager/components/navbar.html
@@ -22,9 +22,11 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active">
-            <a href="#">Contenedores</a>
+            <a href="{% url 'containers' %}">Contenedores</a>
         </li>
-        <li><a href="#">Imagenes</a></li>
+        <li><a href="#">Stats</a></li>
+        <li><a href="#">Images</a></li>
+        <li><a href="#">Fabric</a></li>
       </ul>
     </div>
   </div>
