--- a/pydocker/manager/static/manager/css/manager.css
+++ b/pydocker/manager/static/manager/css/manager.css
@@ -1,4 +1,20 @@
 
+.cursor-pointer {
+    cursor: pointer;
+}
+
+.margin-top-8 {
+    margin-top: 8px;
+}
+
+.no-margin-bottom {
+    margin-bottom: 0;
+}
+
+.no-margin-top {
+    margin-top: 0;
+}
+
 .padding-top-24 {
     padding-top: 24px;
 }
@@ -7,26 +23,72 @@
     padding-top: 60px;
 }
 
-.rotate {
-    animation:spin 4s linear infinite;
-}
-@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
 
-.section-container {
-    width: 100%;
-}
+/**
+ * Text colors
+ */
 
-.text-gray {
+.color-gray {
     color: #9E9E9E;
 }
 
-.text-green {
+.color-green {
     color: #4CAF50;
 }
 
-.text-red {
+.color-red {
     color: #F44336;
 }
+
+
+/**
+ * Material switch
+ */
+.material-switch > input[type="checkbox"] {
+    display: none;
+}
+
+.material-switch > label {
+    cursor: pointer;
+    height: 0;
+    position: relative;
+    width: 40px;
+}
+
+.material-switch > label::before {
+    background: rgb(0, 0, 0);
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
+    content: '';
+    height: 16px;
+    margin-top: -8px;
+    position:absolute;
+    opacity: 0.3;
+    transition: all 0.4s ease-in-out;
+    width: 40px;
+}
+.material-switch > label::after {
+    background: rgb(255, 255, 255);
+    border-radius: 16px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    content: '';
+    height: 24px;
+    left: -4px;
+    margin-top: -8px;
+    position: absolute;
+    top: -4px;
+    transition: all 0.3s ease-in-out;
+    width: 24px;
+}
+.material-switch > input[type="checkbox"]:checked + label::before {
+    background: inherit;
+    opacity: 0.5;
+}
+.material-switch > input[type="checkbox"]:checked + label::after {
+    background: inherit;
+    left: 20px;
+}
+
 
 /**
  * Realtime updates panel
