--- a/pydocker/manager/templates/manager/components/navbar.html
+++ b/pydocker/manager/templates/manager/components/navbar.html
@@ -21,7 +21,11 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active">
+        {% if nav_active == 'containers' %}
+          <li class="active">
+        {% else %}
+          <li>
+        {% endif %}
             <a href="{% url 'containers' %}">Contenedores</a>
         </li>
         <li><a href="#">Stats</a></li>
