:rocket: Modularizing charts creation | Show loading animation while stats being fetched

--- a/pydocker/manager/static/manager/css/manager.css
+++ b/pydocker/manager/static/manager/css/manager.css
@@ -42,6 +42,15 @@
 
 
 /**
+ * Chart container
+ */
+.chart-container {
+    position: relative;
+    width: 100%;
+}
+
+
+/**
  * Material switch
  */
 .material-switch > input[type="checkbox"] {
